--- a/project-manager.html
+++ b/project-manager.html
@@ -40,12 +40,20 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/vmlyr/job/odgqbfwO'>VMLY&R Careers - Campaign Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/vmlyr/job/oqCqbfwn'>VMLY&R Careers - Senior Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://www.charityjob.co.uk/jobs/support-after-suicide-partnership/project-manager/671914?tsId=8'>Project Manager | Support after Suicide Partnership |  | CharityJob.co.uk</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://cbre.referrals.selectminds.com/CBREVmjbYE'>Program Manager - Data Centers - CBRE Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Washington, United States  United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://apply.workable.com/semaphore/j/F26D1DD737/'>Engineering Project Manager - Semaphore</a></h5> 
@@ -134,7 +142,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.edsurge.com/jobs/program-manager-online-and-hybrid-programs-job-at-office-of-academic-innovation-university-of-michigan?utm_content=bufferad16c&utm_medium=social&utm_source=twitter.com&utm_campaign=EdSurgeBuffer'>Program Manager, Online and Hybrid Programs for Center for Academic Innovation, University of Michigan in Ann Arbor, Michigan</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.edsurge.com/jobs/program-manager-online-and-hybrid-programs-job-at-office-of-academic-innovation-university-of-michigan?utm_content=bufferad16c&utm_medium=social&utm_source=twitter.com&utm_campaign=EdSurgeBuffer'>Program Manager, Online and Hybrid Programs for Center for Academic Innovation, University of Michigan in Ann Arbor, Michigan</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -146,7 +154,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/softbank/jobs/4501323002'>Job Application for Compliance Program Manager at SoftBank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/softbank/jobs/4501323002'>Job Application for Compliance Program Manager at SoftBank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -166,7 +174,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light">San Diego, CA  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=ou6gbfwL&__jvst=Employee+Referral&__jvsd=sODmngwV&__jvsc=Twitter&bid=n6wgqMwz&jvi=ou6gbfwL,Job&jvk=Job'>Medidata Solutions Careers - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=ou6gbfwL&__jvst=Employee+Referral&__jvsd=sODmngwV&__jvsc=Twitter&bid=n6wgqMwz&jvi=ou6gbfwL,Job&jvk=Job'>Medidata Solutions Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -236,7 +244,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/oak-street-health/job/oIUsbfwZ'>Oak Street Health Careers - Clinical Informatics Specialist (CIS) Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/oak-street-health/job/oIUsbfwZ'>Oak Street Health Careers - Clinical Informatics Specialist (CIS) Program Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois  Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -264,7 +272,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698611450-project-manager-jr1008842-'>Broadridge Project Manager (JR1008842) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698611450-project-manager-jr1008842-'>Broadridge Project Manager (JR1008842) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -272,7 +280,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Omaha, NE North America Australia Omaha, Nebraska United States Canada Mexico Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/JackLinksProteinSnacks/743999698614130-graphics-project-manager'>Jack Link's Protein Snacks Graphics Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JackLinksProteinSnacks/743999698614130-graphics-project-manager'>Jack Link's Protein Snacks Graphics Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Minneapolis, MN Minneapolis</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -308,7 +316,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hire.withgoogle.com/public/jobs/polsourcecom/view/P_AAAAAAIAACzJAsYbTb2LPm'>Program Manager job in San Francisco, CA at PolSource</a></h5> 
+<h5><a href='https://hire.withgoogle.com/public/jobs/polsourcecom/view/P_AAAAAAIAACzJAsYbTb2LPm'>Program Manager job in San Francisco, CA at PolSource</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA San Francisco, CA, USA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -374,7 +382,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/geotab/7c41c540-6302-413b-87b2-3c23bcd429bc'>Geotab - Senior Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geotab/7c41c540-6302-413b-87b2-3c23bcd429bc'>Geotab - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -382,7 +390,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GoodwillIndustriesOfNorthernNewEngland/743999698590071-goodclean-project-manager-i'>Goodwill Industries of Northern New England GoodClean Project Manager I | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GoodwillIndustriesOfNorthernNewEngland/743999698590071-goodclean-project-manager-i'>Goodwill Industries of Northern New England GoodClean Project Manager I | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -438,14 +446,6 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Auto11/743999698580770-junior-project-manager-financial-systems-d-m-w-'>Auto1 Junior Project Manager Financial Systems (d/m/w) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oIEWafwc&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=n9oBpMwO'>Cirrus Logic Careers - Silicon Development Program Manager</a></h5> 
-<p><span class="badge badge-light">Austin, Texas</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/bpcs/jobs/1928884'>Job Application for Customer Success Talent Development Program Manager at Blueprint Technologies</a></h5> 
-<p><span class="badge badge-light">Irving, TX  Irving, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
