Data Architect | Opportunity Portal. Datazymes Product / Technical Architect | SmartRecruiters. Oak Street Health Careers - Datawarehouse Architect. Oak Street Health Careers - Datawarehouse Architect. Data Architect-24139-VA #0688 job at Radiant Digital in Ashburn, VA, powered by JobScore.       (Ref.691/2019) Data Architect - Syone     .       Database Architect H/F - CDI (Corse) - Jellysmack     . Data Architect - Ritchie Bros. Careers. CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters.       Database Architect H/F - CDI (Corse) - Jellysmack     .       Database Architect H/F - CDI (Corse) - Jellysmack     .       ITS Data Architect - Mechelen,BE - Galapagos     . CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters. BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters. CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters. Job Application for Database Architect at Wikimedia Foundation. Data Architect - iManage - Career Page. Qlik Careers - Analytics Data Architect. Accudata Systems, Inc. Careers - Data Center &amp; Cloud Solutions Architect. Data Architect - Spinvi. Job Application for Data Architect at Solstice | Kin + Carta. Guidewire Software, Inc. Careers - Staff Engineer / Big Data Architect, Cloud Data Platform - San Mateo, CA. Inmarsat Enterprise Data Architect | SmartRecruiters. CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters. Accudata Systems, Inc. Careers - Risk &amp; Compliance Solutions Architect. Data Solutions Architect - Vodafone Careers. CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters. Data Analyst / Architect (m/w/d) gesucht: Bundesanzeiger Verlag GmbH in Köln. Conviva Careers - Principal Data Architect. Data Center & Cloud PreSales Architect - Wipro Careers. Broadridge Senior Data Architect (REF3689C) | SmartRecruiters. Job Application for Senior BI Developer / Data & Analytics Architect at Vonage. nFolks Ltd Oracle 

--- a/data-architect.html
+++ b/data-architect.html
@@ -155,7 +155,7 @@
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://apply.workable.com/spinvi/j/2F4596C49A/'>Data Architect - Spinvi</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/spinvi/j/2F4596C49A/'>Data Architect - Spinvi</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Spinvi is hiring!!! We have an opportunity for you to use your analytical skills, 
 work closely with your customer to understand their questions and needs, and 
@@ -302,7 +302,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -372,7 +372,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/omambfwN'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/omambfwN'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -414,7 +414,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/datacom.co.nz/5103812e-cf8f-4a44-be4d-f07888eae53d'>Datacom - Digital Workplace Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/5103812e-cf8f-4a44-be4d-f07888eae53d'>Datacom - Digital Workplace Architect</a></h5> 
 <p><span class="badge badge-light">Canberra  Canberra</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -426,11 +426,11 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-23803-fl-bxV7Mq7ZCr6BDjaKjNoogA'>Data/Technical Architect-23803-FL #0634 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-23803-fl-bxV7Mq7ZCr6BDjaKjNoogA'>Data/Technical Architect-23803-FL #0634 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Temple Terrace, FLTemple Terrace, FL</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBFaVfw5&k=Job&j=oarGafwb&__jvst=Employee&__jvsd=sx69Wiwv&__jvsc=Twitter&bid=n3auaMw8'>GroupM North America Careers - Data Architect, Data &amp; Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBFaVfw5&k=Job&j=oarGafwb&__jvst=Employee&__jvsd=sx69Wiwv&__jvsc=Twitter&bid=n3auaMw8'>GroupM North America Careers - Data Architect, Data &amp; Services</a></h5> 
 <p><span class="badge badge-light">North America New York, New York  North America</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
